Update cloudbuild yaml files

--- a/cloudbuild-development.yaml
+++ b/cloudbuild-development.yaml
@@ -4,7 +4,7 @@ steps:
   - name: 'gcr.io/cloud-builders/npm'
     args: ['test']
   - name: 'debian'
-    args: ['tar', '--exclude=README.md', '--exclude=.git' , '--exclude=.gitignore' , '--exclude=*.yaml' , '-zcvf' , 'node-package-$SHORT_SHA.tar.gz' ,  '.' ]
+    args: ['tar', '--exclude=README.md', '--exclude=.git', '--exclude=.gcloudignore' , '--exclude=.gitignore' , '--exclude=*.yaml' , '--exclude=node-package-$SHORT_SHA.tar.gz', '-zcvf' , 'node-package-$SHORT_SHA.tar.gz' ,  '.' ]
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['cp', 'node-package-$SHORT_SHA.tar.gz', 'gs://220513-buildartifacts/node-package-$SHORT_SHA.tar.gz']
   - name: 'gcr.io/cloud-builders/gsutil'
@@ -14,7 +14,7 @@ steps:
     - beta
     - functions
     - deploy
-    - helloWorld-dev
+    - helloWorld
     - --source=.
     - --runtime=nodejs8
     - --trigger-http
